# taps

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml
.github/workflows/: check-docs.yml  docs.yml  publish.yml  tests.yml
0.1.0/: 404.html  sitemap.xml
0.1.0/api/apps/: index.html
0.1.0/api/config/: index.html
0.1.0/api/data/: index.html
0.1.0/api/engine/: index.html
0.1.0/api/executor/: index.html
0.1.0/apps/cholesky/: index.html
0.1.0/apps/fedlearn/: index.html
0.1.0/apps/moldesign/: index.html
0.1.0/apps/synthetic/: index.html
0.1.0/contributing/: index.html
0.1.0/contributing/issues-pull-requests/: index.html
0.1.0/contributing/releases/: index.html
0.1.0/css/: extra.css
0.1.0/get-started/: index.html
0.2.0/: 404.html  objects.inv  sitemap.xml
0.2.0/api/: index.html
0.2.0/api/SUMMARY/: index.html
0.2.0/api/apps/: index.html
0.2.0/api/logging/: index.html
0.2.0/apps/docking/: index.html
0.2.0/apps/moldesign/: index.html
0.2.0/contributing/: index.html
0.2.0/contributing/issues-pull-requests/: index.html
0.2.0/contributing/style-guide/: index.html
0.2.0/get-started/: index.html
0.2.0/guides/: index.html
0.2.0/guides/apps/: index.html
0.2.0/search/: search_index.json
0.2.1/: index.html  objects.inv  sitemap.xml
0.2.1/api/: index.html
0.2.1/api/run/: index.html
0.2.1/apps/: index.html
0.2.1/contributing/: index.html
0.2.1/get-started/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  objects.inv
0.2.2/api/: index.html
0.2.2/contributing/: index.html
0.2.2/faq/: index.html
0.2.2/guides/: index.html
0.2.2/publications/: index.html
docs/: faq.md  generate_api.py  get-started.md
docs/apps/: cholesky.md  docking.md  failinject.md  failures.md  fedlearn.md  index.md  mapreduce.md  moldesign.md  montage.md  physics.md  synthetic.md
docs/contributing/: index.md  issues-pull-requests.md  releases.md  style-guide.md
docs/css/: extra.css
docs/guides/: apps.md  config.md  creating-apps.md  creating-workflows.md  data.md  executor.md  index.md  parsl.md  scripts.md
docs/publications/: index.md
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api/: index.html
main/apps/: index.html
main/contributing/: index.html
main/faq/: index.html
main/get-started/: index.html
main/guides/: index.html
main/publications/: index.html
main/search/: search_index.json
taps/: __init__.py  app.py  engine.py  future.py  logging.py  plugins.py  record.py  workflow.py
taps/apps/: __init__.py  app.py  cholesky.py  mapreduce.py  mechanics.py  montage.py  physics.py  protocols.py  synthetic.py
taps/data/: __init__.py  config.py  file.py  filter.py  null.py  proxy.py  transform.py
taps/engine/: __init__.py  _config.py  _engine.py  _protocols.py  _transform.py  config.py  engine.py  task.py  transform.py
taps/executor/: __init__.py  _protocol.py  config.py  dag.py  dask.py  dragon.py  globus.py  parsl.py  python.py  ray.py  taskvine.py  utils.py  workflow.py
taps/filter/: __init__.py  _object.py  _protocol.py  _simple.py  config.py  filters.py  object.py  protocol.py  simple.py
taps/run/: __main__.py  _args.py  config.py  env.py  main.py  parse.py  utils.py
taps/transformer/: __init__.py  _file.py  _null.py  _protocol.py  _proxy.py  config.py  file.py  null.py  protocol.py  proxy.py
testing/: app.py  fixtures.py  globus.py  record.py  utils.py  workflow.py
tests/: config_test.py  conftest.py  context_test.py  data_test.py  engine_test.py  future_test.py  logging_test.py  plugins_test.py  record_test.py  workflow_test.py
tests/apps/: app_test.py  cholesky_test.py  mapreduce_test.py  montage_test.py  synthetic_test.py
tests/data/: config_test.py  file_test.py  filter_test.py  null_test.py  proxy_test.py  transform_test.py
tests/engine/: engine_test.py  future_test.py  proxy_test.py  task_test.py  transform_test.py
tests/executor/: config_test.py  dag_test.py  dask_test.py  dragon_test.py  globus_test.py  parsl_test.py  python_test.py  ray_test.py  taskvine_test.py  utils_test.py  workflow_test.py
tests/filter/: config_test.py  filters_test.py  object_test.py  simple_test.py
tests/run/: config_test.py  env_test.py  main_test.py  parse_test.py  utils_test.py
tests/transformer/: file_test.py  null_test.py  proxy_test.py
wbench/: __init__.py  workflow.py
wbench/wf/: template.py
webs/: __init__.py  config.py  context.py  data.py  logging.py  record.py  run.py  utils.py  workflow.py
webs/config/: benchmark.py
webs/data/: __init__.py  config.py  file.py  null.py  proxy.py  transform.py
webs/executor/: __init__.py  config.py  dag.py  dask.py  globus.py  globus_compute.py  parsl.py  python.py  ray.py  workflow.py
webs/run/: __main__.py  config.py  main.py
webs/wf/: __init__.py  template.py
(+368 files in other folders)
